Name:                   creepy-waffle
Version:                0.0.0.1
Author:                 Yun-Yan Chi
Maintainer:             jaiyalas@gmail.com
Cabal-Version:          >= 1.12
Build-Type:             Simple
--
executable waffle
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Waffle.hs
  ghc-options:      -w -threaded -O2
  build-depends: base        >= 4 && < 5
               , sdl2        >= 2.0
               , elerea      >= 2.8
--
executable creepy
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Creepy.hs
  ghc-options:      -w -threaded -O2
  build-depends: base        >= 4 && < 5
               , sdl2        >= 2.0
               , elerea      >= 2.8
