Name:                   creepy-waffle
Version:                0.0.1.0
Author:                 Yun-Yan Chi
Maintainer:             jaiyalas@gmail.com
Cabal-Version:          >= 1.12
Build-Type:             Simple
--
library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules: CreepyWaffle.UI
                   CreepyWaffle.Types
                   CreepyWaffle.EventHandle
                   CreepyWaffle.SimpleMapLoader
  build-depends: base         >= 4 && < 5
               , data-default >= 0.5
               , elerea      >= 2.8
               , semigroups  >= 0.17
               , sdl2        >= 2.0
               , linear
               , sdl2-cairo
               , cairo       >= 0.13
               -- , containers  >= 0.5.6
  ghc-options: -threaded -O2
--
executable main
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Creepy.hs
  ghc-options:      -w -threaded -O2
  build-depends: base         >= 4 && < 5
               , data-default >= 0.5
               , elerea      >= 2.8
               , semigroups  >= 0.17
               , sdl2        >= 2.0
               , linear      >= 1.19
               , sdl2-cairo  >= 0.1
               , cairo       >= 0.13
               -- , containers  >= 0.5.6
--
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:        -w
  Main-Is:              Spec.hs
  build-depends: base         >= 4 && < 5
               , hspec >= 2.2
