Name:                   LeHavre
Version:                0.0.0.1
Author:                 Yun-Yan Chi
Maintainer:             jaiyalas@gmail.com
Cabal-Version:          >= 1.12
Build-Type:             Simple
--
executable main
   default-language: Haskell2010
   hs-source-dirs:   src
   main-is:          LeHavre.hs
   build-depends: base             >= 4 && < 5
                , sdl2             >= 2.0
                , linear
   ghc-options: -O2 -w
   -- -prof -auto-all -caf-all
--
Test-Suite spec
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
   Hs-Source-Dirs:       src
                      , test
   Ghc-Options:        -w
   Main-Is:            Spec.hs
   build-depends: base         >= 4 && < 5
               , hspec >= 2.2
