Name:                   sdl2-examples
Version:                0.0.0.1
Author:                 Yun-Yan Chi
Maintainer:             jaiyalas@gmail.com
Cabal-Version:          >= 1.12
Build-Type:             Simple
--
executable main
   default-language: Haskell2010
   hs-source-dirs:   src
   main-is:          Demo.hs
   build-depends: base             >= 4 && < 5
                , sdl2             >= 2.0
                , linear
   ghc-options: -O2 -Wall
   -- -prof -auto-all -caf-all
--

library
  ghc-options: -Wall
  hs-source-dirs:
    src/
  build-depends: base             >= 4 && < 5
               , sdl2             >= 2.0
               , linear
  default-language:
    Haskell2010
  exposed-modules:
    Lesson01
    Lesson02
